--- a/braun/index.html
+++ b/braun/index.html
@@ -18,9 +18,9 @@
     </header>
     <div class="menu">
         <ul class="menu__list">
-            <li class="menu__item js-menu-item"><a href="#" class="menu__link js-scroll-link">Электробритвы для бороды</a></li>
-            <li class="menu__item js-menu-item"><a href="#" class="menu__link js-scroll-link">Универсальные триммеры</a></li>
-            <li class="menu__item js-menu-item"><a href="#" class="menu__link js-scroll-link">Триммеры для бороды</a></li>
+            <li class="menu__item js-menu-item"><a href="#beard-shaves" class="menu__link js-scroll-link">Электробритвы для бороды</a></li>
+            <li class="menu__item js-menu-item"><a href="#universal-trimmers" class="menu__link js-scroll-link">Универсальные триммеры</a></li>
+            <li class="menu__item js-menu-item"><a href="#beard-trimmers" class="menu__link js-scroll-link">Триммеры для бороды</a></li>
         </ul>
     </div>
     <main class="main">
@@ -29,19 +29,20 @@
                 <source srcset="./img/banner_1.webp" type="image/webp">
                 <img src="./img/banner_1.jpg" alt="Фоновое изображение">
             </picture>
-            <img class="banner__person" src="./img/person_1.png" alt="Бритвы Braun">
             <div class="container">
                 <div class="banner__wrap">
                     <div class="banner__content">
                         <h1 class="banner__title">Откройте для себя широкий <br>ассортимент продукции Braun <br><span class="text_bold">для мужского бритья</span></h1>
                     </div>
                 </div>
+                <div class="deco"></div>
+                <div class="deco"></div>
             </div>
         </section> 
         <section class="row row_dark">
             <div class="container">
                 <div class="row__container row__container_small">
-                    <a href="#" target="_blank" class="item item_small wow animate__fadeInUp" data-wow-duration="1s" data-wow-delay="0.2s">
+                    <a href="#" target="_blank" class="item item_small wow animate__fadeInUp" data-wow-duration="1s" data-wow-delay="0s">
                         <h3 class="item__title text_tac">Электробритвы</h3>
                         <picture class="item__img">
                             <source srcset="./img/item_small_1.webp" type="image/webp">
@@ -49,7 +50,7 @@
                         </picture>
                         <span class="item__arrow"></span>
                     </a>
-                    <a href="#" target="_blank" class="item item_small wow animate__fadeInUp" data-wow-duration="1s" data-wow-delay="0.4s">
+                    <a href="#" target="_blank" class="item item_small wow animate__fadeInUp" data-wow-duration="1s" data-wow-delay="0.2s">
                         <h3 class="item__title text_tac">Триммеры для&nbsp;бороды</h3>
                         <picture class="item__img">
                             <source srcset="./img/item_small_2.webp" type="image/webp">
@@ -57,7 +58,7 @@
                         </picture>
                         <span class="item__arrow"></span>
                     </a>
-                    <a href="#" target="_blank" class="item item_small wow animate__fadeInUp" data-wow-duration="1s" data-wow-delay="0.6s">
+                    <a href="#" target="_blank" class="item item_small wow animate__fadeInUp" data-wow-duration="1s" data-wow-delay="0.4s">
                         <h3 class="item__title text_tac">Триммеры для&nbsp;всего тела</h3>
                         <picture class="item__img">
                             <source srcset="./img/item_small_3.webp" type="image/webp">
@@ -76,16 +77,18 @@
             <div class="container">
                 <div class="banner__wrap">
                     <div class="banner__content">
-                        <h2 class="banner__title">Электробритвы <br><span class="text_bold">— для бороды</span></h2>
+                        <h2 class="banner__title">Электробритвы<br><span class="text_bold">— для бороды</span></h2>
                         <button class="button button_video">видео линейки</button>
                     </div>
                 </div>
+                <div class="deco"></div>
+                <div class="deco"></div>
             </div>
         </section> 
-        <section class="row">
+        <section id="beard-shaves" class="row">
             <div class="container">
                 <div class="row__container row__container_big">
-                    <article target="_blank" class="item item_big wow animate__fadeInUp" data-wow-duration="1s" data-wow-delay="0.2s">
+                    <article target="_blank" class="item item_big wow animate__fadeInUp" data-wow-duration="1s" data-wow-delay="0s">
                         <picture class="item__img">
                             <source srcset="./img/item_big_1.webp" type="image/webp">
                             <img src="./img/item_big_1.jpg" alt="Электробритвы Series 9">
@@ -105,7 +108,7 @@
                             <a href="#" target="_blank" class="button button_item">подробнее о модели</a>
                         </div>
                     </article>
-                    <article target="_blank" class="item item_big wow animate__fadeInUp" data-wow-duration="1s" data-wow-delay="0.4s">
+                    <article target="_blank" class="item item_big wow animate__fadeInUp" data-wow-duration="1s" data-wow-delay="0.2s">
                         <picture class="item__img">
                             <source srcset="./img/item_big_2.webp" type="image/webp">
                             <img src="./img/item_big_2.jpg" alt="Электробритвы Series 8">
@@ -125,7 +128,7 @@
                             <a href="#" target="_blank" class="button button_item">подробнее о модели</a>
                         </div>
                     </article>
-                    <article target="_blank" class="item item_big wow animate__fadeInUp" data-wow-duration="1s" data-wow-delay="0.6s">
+                    <article target="_blank" class="item item_big wow animate__fadeInUp" data-wow-duration="1s" data-wow-delay="0.4s">
                         <picture class="item__img">
                             <source srcset="./img/item_big_3.webp" type="image/webp">
                             <img src="./img/item_big_3.jpg" alt="Электробритвы Series 3">
@@ -153,7 +156,6 @@
                 <source srcset="./img/banner_3.webp" type="image/webp">
                 <img src="./img/banner_3.jpg" alt="Фоновое изображение">
             </picture>
-            <img class="banner__person" src="./img/person_2.png" alt="Бритвы Braun">
             <div class="container">
                 <div class="banner__wrap">
                     <div class="banner__content">
@@ -161,12 +163,15 @@
                         <button class="button button_video">видео линейки</button>
                     </div>
                 </div>
+                <div class="deco"></div>
+                <div class="deco"></div>
+                <img class="banner__person" src="./img/person_2.png" alt="Бритвы Braun">
             </div>
         </section> 
-        <section class="row">
+        <section id="universal-trimmers" class="row">
             <div class="container container_big">
                 <div class="row__container row__container_big row__container_tight">
-                    <article target="_blank" class="item item_big wow animate__fadeInUp" data-wow-duration="1s" data-wow-delay="0.2s">
+                    <article target="_blank" class="item item_big wow animate__fadeInUp" data-wow-duration="1s" data-wow-delay="0s">
                         <picture class="item__img">
                             <source srcset="./img/item_big_4.webp" type="image/webp">
                             <img src="./img/item_big_4.jpg" alt="Универсальный триммер MGK3220">
@@ -187,7 +192,7 @@
                         </div>
                     </article>
 
-                    <article target="_blank" class="item item_big wow animate__fadeInUp" data-wow-duration="1s" data-wow-delay="0.4s">
+                    <article target="_blank" class="item item_big wow animate__fadeInUp" data-wow-duration="1s" data-wow-delay="0.2s">
                         <picture class="item__img">
                             <source srcset="./img/item_big_5.webp" type="image/webp">
                             <img src="./img/item_big_5.jpg" alt="Универсальный триммер MGK5245">
@@ -208,7 +213,7 @@
                         </div>
                     </article>
 
-                    <article target="_blank" class="item item_big wow animate__fadeInUp" data-wow-duration="1s" data-wow-delay="0.60s">
+                    <article target="_blank" class="item item_big wow animate__fadeInUp" data-wow-duration="1s" data-wow-delay="0.4s">
                         <picture class="item__img">
                             <source srcset="./img/item_big_6.webp" type="image/webp">
                             <img src="./img/item_big_6.jpg" alt="Универсальный триммер MGK7220">
@@ -236,7 +241,6 @@
                 <source srcset="./img/banner_4.webp" type="image/webp">
                 <img src="./img/banner_4.jpg" alt="Фоновое изображение">
             </picture>
-            <img class="banner__person" src="./img/person_3.png" alt="Бритвы Braun">
             <div class="container">
                 <div class="banner__wrap">
                     <div class="banner__content">
@@ -244,12 +248,15 @@
                         <button class="button button_video">видео линейки</button>
                     </div>
                 </div>
+                <div class="deco"></div>
+                <div class="deco"></div>
+                <img class="banner__person" src="./img/person_3.png" alt="Бритвы Braun">
             </div>
         </section> 
-        <section class="row">
+        <section id="beard-trimmers" class="row">
             <div class="container container_big">
                 <div class="row__container row__container_big row__container_tight">
-                    <article target="_blank" class="item item_big wow animate__fadeInUp" data-wow-duration="1s" data-wow-delay="0.2s">
+                    <article target="_blank" class="item item_big wow animate__fadeInUp" data-wow-duration="1s" data-wow-delay="0s">
                         <picture class="item__img">
                             <source srcset="./img/item_big_7.webp" type="image/webp">
                             <img src="./img/item_big_7.jpg" alt="Триммер для бороды BT3221">
@@ -270,7 +277,7 @@
                         </div>
                     </article>
 
-                    <article target="_blank" class="item item_big wow animate__fadeInUp" data-wow-duration="1s" data-wow-delay="0.4s">
+                    <article target="_blank" class="item item_big wow animate__fadeInUp" data-wow-duration="1s" data-wow-delay="0.2s">
                         <picture class="item__img">
                             <source srcset="./img/item_big_8.webp" type="image/webp">
                             <img src="./img/item_big_8.jpg" alt="Триммер для бороды BT5240">
@@ -291,7 +298,7 @@
                         </div>
                     </article>
 
-                    <article target="_blank" class="item item_big wow animate__fadeInUp" data-wow-duration="1s" data-wow-delay="0.6s">
+                    <article target="_blank" class="item item_big wow animate__fadeInUp" data-wow-duration="1s" data-wow-delay="0.4s">
                         <picture class="item__img">
                             <source srcset="./img/item_big_9.webp" type="image/webp">
                             <img src="./img/item_big_9.jpg" alt="Триммер для бороды BT7220">
