--- a/braun/index.html
+++ b/braun/index.html
@@ -42,7 +42,7 @@
         <section class="row row_dark">
             <div class="container">
                 <div class="row__container row__container_small">
-                    <a href="#" target="_blank" class="item item_small wow animate__fadeInUp" data-wow-duration="1s" data-wow-delay="0s">
+                    <a href="#beard-shaves" target="_blank" class="item item_small wow animate__fadeInUp js-scroll-link" data-wow-duration="1s" data-wow-delay="0s">
                         <h3 class="item__title text_tac">Электробритвы</h3>
                         <picture class="item__img">
                             <source srcset="./img/item_small_1.webp" type="image/webp">
@@ -50,7 +50,7 @@
                         </picture>
                         <span class="item__arrow"></span>
                     </a>
-                    <a href="#" target="_blank" class="item item_small wow animate__fadeInUp" data-wow-duration="1s" data-wow-delay="0.2s">
+                    <a href="#beard-trimmers" target="_blank" class="item item_small wow animate__fadeInUp js-scroll-link" data-wow-duration="1s" data-wow-delay="0.2s">
                         <h3 class="item__title text_tac">Триммеры для&nbsp;бороды</h3>
                         <picture class="item__img">
                             <source srcset="./img/item_small_2.webp" type="image/webp">
@@ -58,7 +58,7 @@
                         </picture>
                         <span class="item__arrow"></span>
                     </a>
-                    <a href="#" target="_blank" class="item item_small wow animate__fadeInUp" data-wow-duration="1s" data-wow-delay="0.4s">
+                    <a href="#universal-trimmers" target="_blank" class="item item_small wow animate__fadeInUp js-scroll-link" data-wow-duration="1s" data-wow-delay="0.4s">
                         <h3 class="item__title text_tac">Триммеры для&nbsp;всего тела</h3>
                         <picture class="item__img">
                             <source srcset="./img/item_small_3.webp" type="image/webp">
