--- a/braun/index.html
+++ b/braun/index.html
@@ -88,7 +88,7 @@
         <section id="beard-shaves" class="row">
             <div class="container">
                 <div class="row__container row__container_big">
-                    <article target="_blank" class="item item_big wow animate__fadeInUp js-popup-open" data-name="Series 9" data-wow-duration="1s" data-wow-delay="0s">
+                    <article class="item item_big wow animate__fadeInUp js-popup-open" data-name="Series 9" data-wow-duration="1s" data-wow-delay="0s">
                         <picture class="item__img">
                             <source srcset="./img/item_big_1.webp" type="image/webp">
                             <img loading="lazy" src="./img/item_big_1.jpg" alt="Электробритвы Series 9">
@@ -109,7 +109,7 @@
                         </div>
                     </article>
 
-                    <article target="_blank" class="item item_big wow animate__fadeInUp js-popup-open" data-name="Series 8" data-wow-duration="1s" data-wow-delay="0.2s">
+                    <article class="item item_big wow animate__fadeInUp js-popup-open" data-name="Series 8" data-wow-duration="1s" data-wow-delay="0.2s">
                         <picture class="item__img">
                             <source srcset="./img/item_big_2.webp" type="image/webp">
                             <img loading="lazy" src="./img/item_big_2.jpg" alt="Электробритвы Series 8">
@@ -130,7 +130,7 @@
                         </div>
                     </article>
 
-                    <article target="_blank" class="item item_big wow animate__fadeInUp js-popup-open" data-name="Series 3" data-wow-duration="1s" data-wow-delay="0.4s">
+                    <article class="item item_big wow animate__fadeInUp js-popup-open" data-name="Series 3" data-wow-duration="1s" data-wow-delay="0.4s">
                         <picture class="item__img">
                             <source srcset="./img/item_big_3.webp" type="image/webp">
                             <img loading="lazy" src="./img/item_big_3.jpg" alt="Электробритвы Series 3">
@@ -173,7 +173,7 @@
         <section id="universal-trimmers" class="row">
             <div class="container container_big">
                 <div class="row__container row__container_big row__container_tight">
-                    <article target="_blank" class="item item_big wow animate__fadeInUp js-popup-open" data-name="MGK3220" data-wow-duration="1s" data-wow-delay="0s">
+                    <article class="item item_big wow animate__fadeInUp js-popup-open" data-name="MGK3220" data-wow-duration="1s" data-wow-delay="0s">
                         <picture class="item__img">
                             <source srcset="./img/item_big_4.webp" type="image/webp">
                             <img loading="lazy" src="./img/item_big_4.jpg" alt="Универсальный триммер MGK3220">
@@ -194,7 +194,7 @@
                         </div>
                     </article>
 
-                    <article target="_blank" class="item item_big wow animate__fadeInUp js-popup-open" data-name="MGK5245" data-wow-duration="1s" data-wow-delay="0.2s">
+                    <article class="item item_big wow animate__fadeInUp js-popup-open" data-name="MGK5245" data-wow-duration="1s" data-wow-delay="0.2s">
                         <picture class="item__img">
                             <source srcset="./img/item_big_5.webp" type="image/webp">
                             <img loading="lazy" src="./img/item_big_5.jpg" alt="Универсальный триммер MGK5245">
@@ -215,7 +215,7 @@
                         </div>
                     </article>
 
-                    <article target="_blank" class="item item_big wow animate__fadeInUp js-popup-open" data-name="MGK7220" data-wow-duration="1s" data-wow-delay="0.4s">
+                    <article class="item item_big wow animate__fadeInUp js-popup-open" data-name="MGK7220" data-wow-duration="1s" data-wow-delay="0.4s">
                         <picture class="item__img">
                             <source srcset="./img/item_big_6.webp" type="image/webp">
                             <img loading="lazy" src="./img/item_big_6.jpg" alt="Универсальный триммер MGK7220">
@@ -258,7 +258,7 @@
         <section id="beard-trimmers" class="row">
             <div class="container container_big">
                 <div class="row__container row__container_big row__container_tight">
-                    <article target="_blank" class="item item_big wow animate__fadeInUp js-popup-open" data-name="BT3221" data-wow-duration="1s" data-wow-delay="0s">
+                    <article class="item item_big wow animate__fadeInUp js-popup-open" data-name="BT3221" data-wow-duration="1s" data-wow-delay="0s">
                         <picture class="item__img">
                             <source srcset="./img/item_big_7.webp" type="image/webp">
                             <img loading="lazy" src="./img/item_big_7.jpg" alt="Триммер для бороды BT3221">
@@ -279,7 +279,7 @@
                         </div>
                     </article>
 
-                    <article target="_blank" class="item item_big wow animate__fadeInUp js-popup-open" data-name="BT5240" data-wow-duration="1s" data-wow-delay="0.2s">
+                    <article class="item item_big wow animate__fadeInUp js-popup-open" data-name="BT5240" data-wow-duration="1s" data-wow-delay="0.2s">
                         <picture class="item__img">
                             <source srcset="./img/item_big_8.webp" type="image/webp">
                             <img loading="lazy" src="./img/item_big_8.jpg" alt="Триммер для бороды BT5240">
@@ -300,7 +300,7 @@
                         </div>
                     </article>
 
-                    <article target="_blank" class="item item_big wow animate__fadeInUp js-popup-open" data-name="BT7220" data-wow-duration="1s" data-wow-delay="0.4s">
+                    <article class="item item_big wow animate__fadeInUp js-popup-open" data-name="BT7220" data-wow-duration="1s" data-wow-delay="0.4s">
                         <picture class="item__img">
                             <source srcset="./img/item_big_9.webp" type="image/webp">
                             <img loading="lazy" src="./img/item_big_9.jpg" alt="Триммер для бороды BT7220">
