--- a/braun/index.html
+++ b/braun/index.html
@@ -361,41 +361,41 @@
 
         <div class="popup__item js-popup-item" data-name="MGK3220">
             <button class="popup__close js-popup-close"></button>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/8LzveZjQRL4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/8LzveZjQRL4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
         </div>
         <div class="popup__item js-popup-item" data-name="MGK5245">
             <button class="popup__close js-popup-close"></button>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/8LzveZjQRL4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/8LzveZjQRL4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
         </div>
         <div class="popup__item js-popup-item" data-name="MGK7220">
             <button class="popup__close js-popup-close"></button>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/8LzveZjQRL4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/8LzveZjQRL4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
         </div>
 
         <div class="popup__item js-popup-item" data-name="BT3221">
             <button class="popup__close js-popup-close"></button>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/8LzveZjQRL4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/8LzveZjQRL4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
         </div>
         <div class="popup__item js-popup-item" data-name="BT5240">
             <button class="popup__close js-popup-close"></button>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/8LzveZjQRL4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/8LzveZjQRL4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
         </div>
         <div class="popup__item js-popup-item" data-name="BT7220">
             <button class="popup__close js-popup-close"></button>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/8LzveZjQRL4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/8LzveZjQRL4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
         </div>
 
         <div class="popup__item js-popup-item" data-name="beard-shaves">
             <button class="popup__close js-popup-close"></button>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/8LzveZjQRL4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/8LzveZjQRL4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
         </div>
         <div class="popup__item js-popup-item" data-name="universal-trimmers">
             <button class="popup__close js-popup-close"></button>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/8LzveZjQRL4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/8LzveZjQRL4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
         </div>
         <div class="popup__item js-popup-item" data-name="beard-trimmers">
             <button class="popup__close js-popup-close"></button>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/8LzveZjQRL4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/8LzveZjQRL4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
         </div>
     </div>
     <script src="./js/wow.min.js"></script>
