--- a/braun/index.html
+++ b/braun/index.html
@@ -339,21 +339,21 @@
     <div class="popup js-popup">
         <div class="popup__item js-popup-item" data-name="Series 9">
             <button class="popup__close js-popup-close"></button>
-            <video class="popup__video" preload="none" controls="controls">
+            <video class="popup__video" controls="controls">
                 <source src="./video/myVideo.mp4" type="video/mp4">
                 <source src="./video/myVideo.webm" type="video/webm">
             </video>
         </div>
         <div class="popup__item js-popup-item" data-name="Series 8">
             <button class="popup__close js-popup-close"></button>
-            <video class="popup__video" preload="none" controls="controls">
+            <video class="popup__video" controls="controls">
                 <source src="./video/myVideo.mp4" type="video/mp4">
                 <source src="./video/myVideo.webm" type="video/webm">
             </video>
         </div>
         <div class="popup__item js-popup-item" data-name="Series 3">
             <button class="popup__close js-popup-close"></button>
-            <video class="popup__video" preload="none" controls="controls">
+            <video class="popup__video" controls="controls">
                 <source src="./video/myVideo.mp4" type="video/mp4">
                 <source src="./video/myVideo.webm" type="video/webm">
             </video>
