--- a/braun/index.html
+++ b/braun/index.html
@@ -361,40 +361,76 @@
 
         <div class="popup__item js-popup-item" data-name="MGK3220">
             <button class="popup__close js-popup-close"></button>
+            <video class="popup__video" controls="controls">
+                <source src="./video/myVideo.mp4" type="video/mp4">
+                <source src="./video/myVideo.webm" type="video/webm">
+            </video>
             <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/8LzveZjQRL4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
         </div>
         <div class="popup__item js-popup-item" data-name="MGK5245">
             <button class="popup__close js-popup-close"></button>
+            <video class="popup__video" controls="controls">
+                <source src="./video/myVideo.mp4" type="video/mp4">
+                <source src="./video/myVideo.webm" type="video/webm">
+            </video>
             <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/8LzveZjQRL4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
         </div>
         <div class="popup__item js-popup-item" data-name="MGK7220">
             <button class="popup__close js-popup-close"></button>
+            <video class="popup__video" controls="controls">
+                <source src="./video/myVideo.mp4" type="video/mp4">
+                <source src="./video/myVideo.webm" type="video/webm">
+            </video>
             <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/8LzveZjQRL4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
         </div>
 
         <div class="popup__item js-popup-item" data-name="BT3221">
             <button class="popup__close js-popup-close"></button>
+            <video class="popup__video" controls="controls">
+                <source src="./video/myVideo.mp4" type="video/mp4">
+                <source src="./video/myVideo.webm" type="video/webm">
+            </video>
             <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/8LzveZjQRL4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
         </div>
         <div class="popup__item js-popup-item" data-name="BT5240">
             <button class="popup__close js-popup-close"></button>
+            <video class="popup__video" controls="controls">
+                <source src="./video/myVideo.mp4" type="video/mp4">
+                <source src="./video/myVideo.webm" type="video/webm">
+            </video>
             <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/8LzveZjQRL4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
         </div>
         <div class="popup__item js-popup-item" data-name="BT7220">
             <button class="popup__close js-popup-close"></button>
+            <video class="popup__video" controls="controls">
+                <source src="./video/myVideo.mp4" type="video/mp4">
+                <source src="./video/myVideo.webm" type="video/webm">
+            </video>
             <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/8LzveZjQRL4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
         </div>
 
         <div class="popup__item js-popup-item" data-name="beard-shaves">
             <button class="popup__close js-popup-close"></button>
+            <video class="popup__video" controls="controls">
+                <source src="./video/myVideo.mp4" type="video/mp4">
+                <source src="./video/myVideo.webm" type="video/webm">
+            </video>
             <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/8LzveZjQRL4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
         </div>
         <div class="popup__item js-popup-item" data-name="universal-trimmers">
             <button class="popup__close js-popup-close"></button>
+            <video class="popup__video" controls="controls">
+                <source src="./video/myVideo.mp4" type="video/mp4">
+                <source src="./video/myVideo.webm" type="video/webm">
+            </video>
             <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/8LzveZjQRL4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
         </div>
         <div class="popup__item js-popup-item" data-name="beard-trimmers">
             <button class="popup__close js-popup-close"></button>
+            <video class="popup__video" controls="controls">
+                <source src="./video/myVideo.mp4" type="video/mp4">
+                <source src="./video/myVideo.webm" type="video/webm">
+            </video>
             <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/8LzveZjQRL4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
         </div>
     </div>
