--- a/braun/index.html
+++ b/braun/index.html
@@ -343,18 +343,21 @@
                 <source src="./video/myVideo.mp4" type="video/mp4">
                 <source src="./video/myVideo.webm" type="video/webm">
             </video>
+        </div>
         <div class="popup__item js-popup-item" data-name="Series 8">
             <button class="popup__close js-popup-close"></button>
             <video class="popup__video" controls="controls">
                 <source src="./video/myVideo.mp4" type="video/mp4">
                 <source src="./video/myVideo.webm" type="video/webm">
             </video>
+        </div>
         <div class="popup__item js-popup-item" data-name="Series 3">
             <button class="popup__close js-popup-close"></button>
             <video class="popup__video" controls="controls">
                 <source src="./video/myVideo.mp4" type="video/mp4">
                 <source src="./video/myVideo.webm" type="video/webm">
             </video>
+        </div>
 
         <div class="popup__item js-popup-item" data-name="MGK3220">
             <button class="popup__close js-popup-close"></button>
