--- a/braun/index.html
+++ b/braun/index.html
@@ -84,6 +84,7 @@
                 <div class="deco"></div>
                 <div class="deco"></div>
             </div>
+            <div class="play"></div>
         </section>
         <section id="beard-shaves" class="row">
             <div class="container">
@@ -169,6 +170,7 @@
                 <div class="deco"></div>
                 <img class="banner__person" src="./img/person_2.png" alt="Бритвы Braun">
             </div>
+            <div class="play"></div>
         </section> 
         <section id="universal-trimmers" class="row">
             <div class="container container_big">
@@ -254,6 +256,7 @@
                 <div class="deco"></div>
                 <img class="banner__person" src="./img/person_3.png" alt="Бритвы Braun">
             </div>
+            <div class="play"></div>
         </section> 
         <section id="beard-trimmers" class="row">
             <div class="container container_big">
@@ -339,21 +342,21 @@
     <div class="popup js-popup">
         <div class="popup__item js-popup-item" data-name="Series 9">
             <button class="popup__close js-popup-close"></button>
-            <video class="popup__video" controls="controls">
+            <video class="popup__video" preload="none" controls="controls">
                 <source src="./video/myVideo.mp4" type="video/mp4">
                 <source src="./video/myVideo.webm" type="video/webm">
             </video>
         </div>
         <div class="popup__item js-popup-item" data-name="Series 8">
             <button class="popup__close js-popup-close"></button>
-            <video class="popup__video" controls="controls">
+            <video class="popup__video" preload="none" controls="controls">
                 <source src="./video/myVideo.mp4" type="video/mp4">
                 <source src="./video/myVideo.webm" type="video/webm">
             </video>
         </div>
         <div class="popup__item js-popup-item" data-name="Series 3">
             <button class="popup__close js-popup-close"></button>
-            <video class="popup__video" controls="controls">
+            <video class="popup__video" preload="none" controls="controls">
                 <source src="./video/myVideo.mp4" type="video/mp4">
                 <source src="./video/myVideo.webm" type="video/webm">
             </video>
@@ -361,21 +364,21 @@
 
         <div class="popup__item js-popup-item" data-name="MGK3220">
             <button class="popup__close js-popup-close"></button>
-            <video class="popup__video" controls="controls">
+            <video class="popup__video" preload="none" controls="controls">
                 <source src="./video/myVideo.mp4" type="video/mp4">
                 <source src="./video/myVideo.webm" type="video/webm">
             </video>
         </div>
         <div class="popup__item js-popup-item" data-name="MGK5245">
             <button class="popup__close js-popup-close"></button>
-            <video class="popup__video" controls="controls">
+            <video class="popup__video" preload="none" controls="controls">
                 <source src="./video/myVideo.mp4" type="video/mp4">
                 <source src="./video/myVideo.webm" type="video/webm">
             </video>
         </div>
         <div class="popup__item js-popup-item" data-name="MGK7220">
             <button class="popup__close js-popup-close"></button>
-            <video class="popup__video" controls="controls">
+            <video class="popup__video" preload="none" controls="controls">
                 <source src="./video/myVideo.mp4" type="video/mp4">
                 <source src="./video/myVideo.webm" type="video/webm">
             </video>
@@ -383,21 +386,21 @@
 
         <div class="popup__item js-popup-item" data-name="BT3221">
             <button class="popup__close js-popup-close"></button>
-            <video class="popup__video" controls="controls">
+            <video class="popup__video" preload="none" controls="controls">
                 <source src="./video/myVideo.mp4" type="video/mp4">
                 <source src="./video/myVideo.webm" type="video/webm">
             </video>
         </div>
         <div class="popup__item js-popup-item" data-name="BT5240">
             <button class="popup__close js-popup-close"></button>
-            <video class="popup__video" controls="controls">
+            <video class="popup__video" preload="none" controls="controls">
                 <source src="./video/myVideo.mp4" type="video/mp4">
                 <source src="./video/myVideo.webm" type="video/webm">
             </video>
         </div>
         <div class="popup__item js-popup-item" data-name="BT7220">
             <button class="popup__close js-popup-close"></button>
-            <video class="popup__video" controls="controls">
+            <video class="popup__video" preload="none" controls="controls">
                 <source src="./video/myVideo.mp4" type="video/mp4">
                 <source src="./video/myVideo.webm" type="video/webm">
             </video>
@@ -405,21 +408,21 @@
 
         <div class="popup__item js-popup-item" data-name="beard-shaves">
             <button class="popup__close js-popup-close"></button>
-            <video class="popup__video" controls="controls">
+            <video class="popup__video" preload="none" controls="controls">
                 <source src="./video/myVideo.mp4" type="video/mp4">
                 <source src="./video/myVideo.webm" type="video/webm">
             </video>
         </div>
         <div class="popup__item js-popup-item" data-name="universal-trimmers">
             <button class="popup__close js-popup-close"></button>
-            <video class="popup__video" controls="controls">
+            <video class="popup__video" preload="none" controls="controls">
                 <source src="./video/myVideo.mp4" type="video/mp4">
                 <source src="./video/myVideo.webm" type="video/webm">
             </video>
         </div>
         <div class="popup__item js-popup-item" data-name="beard-trimmers">
             <button class="popup__close js-popup-close"></button>
-            <video class="popup__video" controls="controls">
+            <video class="popup__video" preload="none" controls="controls">
                 <source src="./video/myVideo.mp4" type="video/mp4">
                 <source src="./video/myVideo.webm" type="video/webm">
             </video>
