--- a/braun/index.html
+++ b/braun/index.html
@@ -10,8 +10,8 @@
     <header class="header">
         <div class="container">
             <div class="header__wrap">
-                <img loading="lazy" class="logo logo_braun" src="./img/logo.png" alt="Логотип Braun">
-                <img loading="lazy" class="logo logo_ixbt" src="./img/logo-ixbt.png" alt="Логотип Ixbt">
+                <img loading="lazy" class="logo logo_braun" src="./img/logo.svg" alt="Логотип Braun">
+                <img loading="lazy" class="logo logo_ixbt" src="./img/logo-ixbt.svg" alt="Логотип Ixbt">
                 <button class="button burger js-burger"><span></span></button>
             </div>
         </div>
@@ -42,7 +42,7 @@
         <section class="row row_dark">
             <div class="container">
                 <div class="row__container row__container_small">
-                    <a href="#beard-shaves" target="_blank" class="item item_small wow animate__fadeInUp js-scroll-link" data-wow-duration="1s" data-wow-delay="0s">
+                    <a href="#beard-shaves" target="_blank" class="item item_small wow animate__fadeInUp js-scroll-link" data-wow-duration="1.2s" data-wow-delay="0s">
                         <h3 class="item__title text_tac">Электробритвы</h3>
                         <picture class="item__img">
                             <source srcset="./img/item_small_1.webp" type="image/webp">
@@ -50,7 +50,7 @@
                         </picture>
                         <span class="item__arrow"></span>
                     </a>
-                    <a href="#beard-trimmers" target="_blank" class="item item_small wow animate__fadeInUp js-scroll-link" data-wow-duration="1s" data-wow-delay="0.2s">
+                    <a href="#beard-trimmers" target="_blank" class="item item_small wow animate__fadeInUp js-scroll-link" data-wow-duration="1.2s" data-wow-delay="0.2s">
                         <h3 class="item__title text_tac">Триммеры для&nbsp;бороды</h3>
                         <picture class="item__img">
                             <source srcset="./img/item_small_2.webp" type="image/webp">
@@ -58,7 +58,7 @@
                         </picture>
                         <span class="item__arrow"></span>
                     </a>
-                    <a href="#universal-trimmers" target="_blank" class="item item_small wow animate__fadeInUp js-scroll-link" data-wow-duration="1s" data-wow-delay="0.4s">
+                    <a href="#universal-trimmers" target="_blank" class="item item_small wow animate__fadeInUp js-scroll-link" data-wow-duration="1.2s" data-wow-delay="0.4s">
                         <h3 class="item__title text_tac">Триммеры для&nbsp;всего тела</h3>
                         <picture class="item__img">
                             <source srcset="./img/item_small_3.webp" type="image/webp">
@@ -69,7 +69,7 @@
                 </div>
             </div>
         </section>
-        <section class="banner banner_second js-popup-open" data-name="beard-shaves">
+        <section id="beard-shaves" class="banner banner_second js-popup-open" data-name="beard-shaves">
             <picture class="banner__bg">
                 <source srcset="./img/banner_2.webp" type="image/webp">
                 <img loading="lazy" src="./img/banner_2.jpg" alt="Фоновое изображение">
@@ -86,10 +86,10 @@
             </div>
             <div class="play"></div>
         </section>
-        <section id="beard-shaves" class="row">
+        <section class="row">
             <div class="container">
                 <div class="row__container row__container_big">
-                    <article class="item item_big wow animate__fadeInUp js-popup-open" data-name="Series 9" data-wow-duration="1s" data-wow-delay="0s">
+                    <article class="item item_big wow animate__fadeInUp js-popup-open" data-name="Series 9" data-wow-duration="1.2s" data-wow-delay="0s">
                         <picture class="item__img">
                             <source srcset="./img/item_big_1.webp" type="image/webp">
                             <img loading="lazy" src="./img/item_big_1.jpg" alt="Электробритвы Series 9">
@@ -110,7 +110,7 @@
                         </div>
                     </article>
 
-                    <article class="item item_big wow animate__fadeInUp js-popup-open" data-name="Series 8" data-wow-duration="1s" data-wow-delay="0.2s">
+                    <article class="item item_big wow animate__fadeInUp js-popup-open" data-name="Series 8" data-wow-duration="1.2s" data-wow-delay="0.2s">
                         <picture class="item__img">
                             <source srcset="./img/item_big_2.webp" type="image/webp">
                             <img loading="lazy" src="./img/item_big_2.jpg" alt="Электробритвы Series 8">
@@ -131,7 +131,7 @@
                         </div>
                     </article>
 
-                    <article class="item item_big wow animate__fadeInUp js-popup-open" data-name="Series 3" data-wow-duration="1s" data-wow-delay="0.4s">
+                    <article class="item item_big wow animate__fadeInUp js-popup-open" data-name="Series 3" data-wow-duration="1.2s" data-wow-delay="0.4s">
                         <picture class="item__img">
                             <source srcset="./img/item_big_3.webp" type="image/webp">
                             <img loading="lazy" src="./img/item_big_3.jpg" alt="Электробритвы Series 3">
@@ -154,7 +154,7 @@
                 </div>
             </div>
         </section>
-        <section class="banner banner_third js-popup-open" data-name="universal-trimmers">
+        <section id="universal-trimmers" class="banner banner_third js-popup-open" data-name="universal-trimmers">
             <picture class="banner__bg">
                 <source srcset="./img/banner_3.webp" type="image/webp">
                 <img loading="lazy" src="./img/banner_3.jpg" alt="Фоновое изображение">
@@ -172,10 +172,10 @@
             </div>
             <div class="play"></div>
         </section> 
-        <section id="universal-trimmers" class="row">
+        <section class="row">
             <div class="container container_big">
                 <div class="row__container row__container_big row__container_tight">
-                    <article class="item item_big wow animate__fadeInUp js-popup-open" data-name="MGK3220" data-wow-duration="1s" data-wow-delay="0s">
+                    <article class="item item_big wow animate__fadeInUp js-popup-open" data-name="MGK3220" data-wow-duration="1.2s" data-wow-delay="0s">
                         <picture class="item__img">
                             <source srcset="./img/item_big_4.webp" type="image/webp">
                             <img loading="lazy" src="./img/item_big_4.jpg" alt="Универсальный триммер MGK3220">
@@ -196,7 +196,7 @@
                         </div>
                     </article>
 
-                    <article class="item item_big wow animate__fadeInUp js-popup-open" data-name="MGK5245" data-wow-duration="1s" data-wow-delay="0.2s">
+                    <article class="item item_big wow animate__fadeInUp js-popup-open" data-name="MGK5245" data-wow-duration="1.2s" data-wow-delay="0.2s">
                         <picture class="item__img">
                             <source srcset="./img/item_big_5.webp" type="image/webp">
                             <img loading="lazy" src="./img/item_big_5.jpg" alt="Универсальный триммер MGK5245">
@@ -217,7 +217,7 @@
                         </div>
                     </article>
 
-                    <article class="item item_big wow animate__fadeInUp js-popup-open" data-name="MGK7220" data-wow-duration="1s" data-wow-delay="0.4s">
+                    <article class="item item_big wow animate__fadeInUp js-popup-open" data-name="MGK7220" data-wow-duration="1.2s" data-wow-delay="0.4s">
                         <picture class="item__img">
                             <source srcset="./img/item_big_6.webp" type="image/webp">
                             <img loading="lazy" src="./img/item_big_6.jpg" alt="Универсальный триммер MGK7220">
@@ -240,7 +240,7 @@
                 </div>
             </div>
         </section>
-        <section class="banner banner_fourth js-popup-open" data-name="beard-trimmers">
+        <section id="beard-trimmers" class="banner banner_fourth js-popup-open" data-name="beard-trimmers">
             <picture class="banner__bg">
                 <source srcset="./img/banner_4.webp" type="image/webp">
                 <img loading="lazy" src="./img/banner_4.jpg" alt="Фоновое изображение">
@@ -258,10 +258,10 @@
             </div>
             <div class="play"></div>
         </section> 
-        <section id="beard-trimmers" class="row">
+        <section class="row">
             <div class="container container_big">
                 <div class="row__container row__container_big row__container_tight">
-                    <article class="item item_big wow animate__fadeInUp js-popup-open" data-name="BT3221" data-wow-duration="1s" data-wow-delay="0s">
+                    <article class="item item_big wow animate__fadeInUp js-popup-open" data-name="BT3221" data-wow-duration="1.2s" data-wow-delay="0s">
                         <picture class="item__img">
                             <source srcset="./img/item_big_7.webp" type="image/webp">
                             <img loading="lazy" src="./img/item_big_7.jpg" alt="Триммер для бороды BT3221">
@@ -282,7 +282,7 @@
                         </div>
                     </article>
 
-                    <article class="item item_big wow animate__fadeInUp js-popup-open" data-name="BT5240" data-wow-duration="1s" data-wow-delay="0.2s">
+                    <article class="item item_big wow animate__fadeInUp js-popup-open" data-name="BT5240" data-wow-duration="1.2s" data-wow-delay="0.2s">
                         <picture class="item__img">
                             <source srcset="./img/item_big_8.webp" type="image/webp">
                             <img loading="lazy" src="./img/item_big_8.jpg" alt="Триммер для бороды BT5240">
@@ -303,7 +303,7 @@
                         </div>
                     </article>
 
-                    <article class="item item_big wow animate__fadeInUp js-popup-open" data-name="BT7220" data-wow-duration="1s" data-wow-delay="0.4s">
+                    <article class="item item_big wow animate__fadeInUp js-popup-open" data-name="BT7220" data-wow-duration="1.2s" data-wow-delay="0.4s">
                         <picture class="item__img">
                             <source srcset="./img/item_big_9.webp" type="image/webp">
                             <img loading="lazy" src="./img/item_big_9.jpg" alt="Триммер для бороды BT7220">
@@ -332,8 +332,30 @@
             <div class="footer__wrap">
                 <div class="footer__content">
                     <div class="footer__logo">
-                        <img loading="lazy" class="footer__logo-img" src="./img/logo-footer.png" alt="Логотип">
+                        <svg version="1.1" id="Ebene_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 86 36" xml:space="preserve">
+                            <g id="layer1" transform="matrix(0.45094353,0,0,0.45094353,357.14835,54.396579)">
+                                <g id="g2414" transform="translate(35.43305,35.421298)">
+                                    <path id="path7" d="M-811.06-85.95c-2.56,0-5.45,0-5.45,0v-16.78c0,0,2.8,0,5.45,0c3.73,0,5.46,2.78,5.46,7.77
+                                        C-805.6-88.12-807.67-85.95-811.06-85.95 M-816.51-127.06c0,0,2.75,0,5.32,0c2.74,0,4.96,2.02,4.96,7.58
+                                        c0,5.62-2.57,7.57-4.96,7.57c-2.65,0-5.32,0-5.32,0V-127.06z M-801.97-107.95V-108c2.16-1.52,5.61-4.12,5.61-12.5
+                                        c0-10.83-5.65-15.73-13.28-15.73c-2.59,0-16.67,0-16.67,0v59.46c0,0,9.29,0,16.58,0c9.4,0,13.97-6.97,13.97-17.34
+                                        C-795.75-103.81-799.55-106.48-801.97-107.95L-801.97-107.95z"/>
+                                    <path id="path9" d="M-777.73-127.06c0,0,2.75,0,5.32,0c2.74,0,4.96,2.02,4.96,7.58c0,5.62-2.56,7.57-4.96,7.57
+                                        c-2.65,0-5.32,0-5.32,0V-127.06 M-757.76-96.68c0-7.41-2.3-9.49-5.43-11.28V-108c2.16-1.52,5.58-4.12,5.58-12.5
+                                        c0-10.83-5.62-15.73-13.25-15.73c-2.59,0-16.67,0-16.67,0v59.46h9.79l0.01-25.94c0,0,2.66,0,5.31,0c2.79,0,4.78,2.32,4.78,7.57
+                                        v18.37h9.87L-757.76-96.68L-757.76-96.68z"/>
+                                    <path id="path11" d="M-738.66-141.61c0-4.47,4.1-5.05,6.37-5.05c2.27,0,6.36,0.57,6.36,5.05l0,29.69h-12.73L-738.66-141.61
+                                        M-732.29-156.05c-4.14,0-16.16,0.94-16.16,12.96v66.32h9.8v-25.95h12.72l0,25.94h9.8v-66.31
+                                        C-716.13-155.13-728.16-156.05-732.29-156.05L-732.29-156.05z"/>
+                                    <path id="path13" d="M-686.79-136.25v46.81c0,2.38-1.97,3.97-4.9,3.97c-2.94,0-4.87-1.59-4.87-3.97l-0.01-46.81l-9.79,0.01
+                                        l0,48.36c0,9.21,9.47,11.66,14.69,11.66c5.17,0,14.68-2.47,14.68-11.67v-48.36H-686.79"/>
+                                    <path id="path15" d="M-647.65-76.79l0-46.79c0-2.38-1.97-3.97-4.89-3.97c-2.94,0-4.88,1.6-4.88,3.97l0,46.79l-9.8,0.01v-48.36
+                                        c0-9.21,9.47-11.66,14.69-11.66c5.17,0,14.68,2.47,14.68,11.67v48.34L-647.65-76.79"/>
+                                </g>
+                            </g>
+                        </svg>
                     </div>
+                    <small class="footer__copyright text_bold">Designed for what matters</small>
                     <small class="footer__copyright">© 2020 Procter & Gamble  |  iXbt.com</small>
                 </div>
             </div>
