--- a/braun/index.html
+++ b/braun/index.html
@@ -42,7 +42,7 @@
         <section class="row row_dark">
             <div class="container">
                 <div class="row__container row__container_small">
-                    <a href="#beard-shaves" target="_blank" class="item item_small wow animate__fadeInUp js-scroll-link" data-wow-duration="1.4s" data-wow-delay="0s">
+                    <a href="#beard-shaves" target="_blank" class="item item_small js-scroll-link" data-aos-delay="0" data-aos="fade-up">
                         <h3 class="item__title text_tac">Электробритвы</h3>
                         <picture class="item__img">
                             <source srcset="./img/item_small_1.webp" type="image/webp">
@@ -50,7 +50,7 @@
                         </picture>
                         <span class="item__arrow"></span>
                     </a>
-                    <a href="#beard-trimmers" target="_blank" class="item item_small wow animate__fadeInUp js-scroll-link" data-wow-duration="1.4s" data-wow-delay="0.2s">
+                    <a href="#beard-trimmers" target="_blank" class="item item_small js-scroll-link" data-aos-delay="300" data-aos="fade-up">
                         <h3 class="item__title text_tac">Триммеры для&nbsp;бороды</h3>
                         <picture class="item__img">
                             <source srcset="./img/item_small_2.webp" type="image/webp">
@@ -58,7 +58,7 @@
                         </picture>
                         <span class="item__arrow"></span>
                     </a>
-                    <a href="#universal-trimmers" target="_blank" class="item item_small wow animate__fadeInUp js-scroll-link" data-wow-duration="1.4s" data-wow-delay="0.4s">
+                    <a href="#universal-trimmers" target="_blank" class="item item_small js-scroll-link" data-aos-delay="600" data-aos="fade-up">
                         <h3 class="item__title text_tac">Триммеры для&nbsp;всего тела</h3>
                         <picture class="item__img">
                             <source srcset="./img/item_small_3.webp" type="image/webp">
@@ -89,7 +89,7 @@
         <section class="row">
             <div class="container">
                 <div class="row__container row__container_big">
-                    <article class="item item_big wow animate__fadeInUp js-popup-open" data-name="Series 9" data-wow-duration="2s" data-wow-delay="0s">
+                    <article class="item item_big js-popup-open" data-name="Series 9" data-aos-delay="0" data-aos="fade-up">
                         <picture class="item__img">
                             <source srcset="./img/item_big_1.webp" type="image/webp">
                             <img loading="lazy" src="./img/item_big_1.jpg" alt="Электробритвы Series 9">
@@ -110,7 +110,7 @@
                         </div>
                     </article>
 
-                    <article class="item item_big wow animate__fadeInUp js-popup-open" data-name="Series 8" data-wow-duration="2s" data-wow-delay="0.2s">
+                    <article class="item item_big js-popup-open" data-name="Series 8" data-aos-delay="300" data-aos="fade-up">
                         <picture class="item__img">
                             <source srcset="./img/item_big_2.webp" type="image/webp">
                             <img loading="lazy" src="./img/item_big_2.jpg" alt="Электробритвы Series 8">
@@ -131,7 +131,7 @@
                         </div>
                     </article>
 
-                    <article class="item item_big wow animate__fadeInUp js-popup-open" data-name="Series 3" data-wow-duration="2s" data-wow-delay="0.4s">
+                    <article class="item item_big js-popup-open" data-name="Series 3" data-aos-delay="600" data-aos="fade-up">
                         <picture class="item__img">
                             <source srcset="./img/item_big_3.webp" type="image/webp">
                             <img loading="lazy" src="./img/item_big_3.jpg" alt="Электробритвы Series 3">
@@ -175,7 +175,7 @@
         <section class="row">
             <div class="container container_big">
                 <div class="row__container row__container_big row__container_tight">
-                    <article class="item item_big wow animate__fadeInUp js-popup-open" data-name="MGK3220" data-wow-duration="2s" data-wow-delay="0s">
+                    <article class="item item_big js-popup-open" data-name="MGK3220" data-aos-delay="0" data-aos="fade-up">
                         <picture class="item__img">
                             <source srcset="./img/item_big_4.webp" type="image/webp">
                             <img loading="lazy" src="./img/item_big_4.jpg" alt="Универсальный триммер MGK3220">
@@ -196,7 +196,7 @@
                         </div>
                     </article>
 
-                    <article class="item item_big wow animate__fadeInUp js-popup-open" data-name="MGK5245" data-wow-duration="2s" data-wow-delay="0.2s">
+                    <article class="item item_big js-popup-open" data-name="MGK5245" data-aos-delay="300" data-aos="fade-up">
                         <picture class="item__img">
                             <source srcset="./img/item_big_5.webp" type="image/webp">
                             <img loading="lazy" src="./img/item_big_5.jpg" alt="Универсальный триммер MGK5245">
@@ -217,7 +217,7 @@
                         </div>
                     </article>
 
-                    <article class="item item_big wow animate__fadeInUp js-popup-open" data-name="MGK7220" data-wow-duration="2s" data-wow-delay="0.4s">
+                    <article class="item item_big js-popup-open" data-name="MGK7220" data-aos-delay="600" data-aos="fade-up">
                         <picture class="item__img">
                             <source srcset="./img/item_big_6.webp" type="image/webp">
                             <img loading="lazy" src="./img/item_big_6.jpg" alt="Универсальный триммер MGK7220">
@@ -261,7 +261,7 @@
         <section class="row">
             <div class="container container_big">
                 <div class="row__container row__container_big row__container_tight">
-                    <article class="item item_big wow animate__fadeInUp js-popup-open" data-name="BT3221" data-wow-duration="2s" data-wow-delay="0s">
+                    <article class="item item_big js-popup-open" data-name="BT3221" data-aos-delay="0" data-aos="fade-up">
                         <picture class="item__img">
                             <source srcset="./img/item_big_7.webp" type="image/webp">
                             <img loading="lazy" src="./img/item_big_7.jpg" alt="Триммер для бороды BT3221">
@@ -282,7 +282,7 @@
                         </div>
                     </article>
 
-                    <article class="item item_big wow animate__fadeInUp js-popup-open" data-name="BT5240" data-wow-duration="2s" data-wow-delay="0.2s">
+                    <article class="item item_big js-popup-open" data-name="BT5240" data-aos-delay="300" data-aos="fade-up">
                         <picture class="item__img">
                             <source srcset="./img/item_big_8.webp" type="image/webp">
                             <img loading="lazy" src="./img/item_big_8.jpg" alt="Триммер для бороды BT5240">
@@ -303,7 +303,7 @@
                         </div>
                     </article>
 
-                    <article class="item item_big wow animate__fadeInUp js-popup-open" data-name="BT7220" data-wow-duration="2s" data-wow-delay="0.4s">
+                    <article class="item item_big js-popup-open" data-name="BT7220" data-aos-delay="600" data-aos="fade-up">
                         <picture class="item__img">
                             <source srcset="./img/item_big_9.webp" type="image/webp">
                             <img loading="lazy" src="./img/item_big_9.jpg" alt="Триммер для бороды BT7220">
@@ -450,7 +450,7 @@
             </video>
         </div>
     </div>
-    <script src="./js/wow.min.js"></script>
+    <script src="./js/aos.js"></script>
     <script src="./js/main.js"></script>
 </body>
 </html>
